--- a/web-gulp/package.json
+++ b/web-gulp/package.json
@@ -25,7 +25,6 @@
     "browser-sync": "^2.18.13",
     "chalk": "^2.3.0",
     "cross-env": "^5.1.1",
-    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.7",
     "css-mqpacker": "^6.0.1",
     "cssnano": "^3.10.0",
@@ -34,9 +33,6 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.8.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-cache": "^1.0.1",
@@ -56,17 +52,11 @@
     "gulp-zip": "^4.0.0",
     "html-webpack-plugin": "^2.30.1",
     "imagemin-pngquant": "^5.0.1",
-    "node-notifier": "^5.1.2",
     "node-sass": "^4.9.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
     "postcss-cssnext": "^3.0.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
-    "postcss-url": "^7.2.1",
     "proxy-middleware": "^0.15.0",
-    "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url": "^0.11.0",
@@ -79,18 +69,13 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "expose": "^0.1.4",
+    "expose-loader": "^0.7.5",
+    "jquery": "^3.3.1",
+    "jquery-modal": "^0.9.1",
     "lib-flexible": "^0.3.2",
     "px2rem-loader": "^0.1.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+  }
 }
